<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Clock app</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="dark_clock">Dark Clock</string>
    <string name="default_clock">Clock</string>
    <string name="red_molot">Custom styles</string>
    <string name="roman">Roman Numbers</string>
    <string name="sky">Sky Clock</string>
    <string name="vlad_des">My friends design</string>
    <string name="different_sizes_and_positions">Different sizes and positions</string>
</resources>